# encore-collective

./: README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  test_health.py
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  celery_app.py  enums.py
backend/app/api/v1/: auth.py  garments.py  health.py  router.py
backend/app/core/: config.py
backend/app/models/: __init__.py  garment.py  user.py
backend/app/schemas/: garment.py
backend/app/services/: security.py
docker/: docker-compose.yml
frontend/: Dockerfile  package.json
frontend/src/: globals.css  metric-card.tsx  page.tsx  types.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: button.tsx  nav.tsx  reveal.tsx  shell.tsx
frontend/src/features/auth/: auth-card.tsx
frontend/src/features/dashboard/: garment-timeline.tsx
