[project]
name = "encore-api"
version = "0.1.0"
description = "Encore platform API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.6",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.1",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
